<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".ThemActivity">

    <TextView
        android:id="@+id/thu_chiTv_Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/thu_chiTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ngayTv_Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:text="@string/ngayTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thu_chiTv_Them" />

    <EditText
        android:id="@+id/editTextDate_Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="63dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/DateFormatText"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="221dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="33dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioBtn_Thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkRadioBtn_them"
            android:text="@string/Thu" />

        <RadioButton
            android:id="@+id/radioBtn_Chi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkRadioBtn_them"
            android:text="@string/Chi" />
    </RadioGroup>

    <TextView
        android:id="@+id/loaiKhoanTv_Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="96dp"
        android:text="@string/loaiKhoanTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ngayTv_Them" />

    <Button
        android:id="@+id/loaiKhoanBtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="59dp"
        android:onClick="openLoaiKhoanList"
        android:text="@string/loaiKhoanBtn_hint"
        app:layout_constraintStart_toEndOf="@+id/loaiKhoanTv_Them"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate_Them" />

    <TextView
        android:id="@+id/giaTriTv_Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="107dp"
        android:text="@string/giaTriTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loaiKhoanTv_Them" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="75dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/giaTri_hint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/giaTriTv_Them"
        app:layout_constraintTop_toBottomOf="@+id/loaiKhoanBtn" />

    <Button
        android:id="@+id/addBtn_Them"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="121dp"
        android:onClick="saveKhoanThuChi"
        android:text="@string/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loaiKhoanSelectedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/loaiKhoanTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loaiKhoanBtn" />

    <Button
        android:id="@+id/datepicker_them"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@color/black"
        android:onClick="openDatePicker"
        app:layout_constraintBottom_toTopOf="@+id/loaiKhoanBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>