<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listView_Home"
        android:layout_width="420dp"
        android:layout_height="601dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="130dp"
        android:layout_height="82dp"
        android:layout_marginStart="5dp"
        android:onClick="launchActivity_TimKiem"
        android:text="@string/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statisticButton"
        android:layout_width="130dp"
        android:layout_height="82dp"
        android:layout_marginEnd="5dp"
        android:onClick="launchActivity_ThongKe"
        android:text="@string/statisticButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="130dp"
        android:layout_height="82dp"
        android:onClick="launchActivity_Them"
        android:text="@string/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statisticButton"
        app:layout_constraintStart_toEndOf="@+id/searchButton" />

    <Button
        android:id="@+id/themLoaiKhoanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchActivity_ThemLoaiKhoan"
        android:text="@string/themLoaiKhoanBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/datNguongChiBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchActivity_DatNguongChi"
        android:text="@string/datNguongChiBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>