<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimKiemActivity">


    <EditText
        android:id="@+id/dateSearchTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DateFormatText"
        android:inputType="text" />

    <EditText
        android:id="@+id/loaiKhoanSearchTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loaiKhoanTextview"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/searchBtn_timKiem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Search"
        android:text="@string/searchButton" />

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>